mdapioutput/unpackaged/objects/VehicleData__c.object
<CustomObject>
    <fields>
        <fullName>Date_Sample__c</fullName>
        <label>Date Sample</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_ref__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Data</relationshipLabel>
        <relationshipName>Vehicle_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vehicle Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Vehicle Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>